--- a/lab2_1_weather_data_around_winona.ipynb
+++ b/lab2_1_weather_data_around_winona.ipynb
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {
     "id": "D92NkCq_995Z"
    },
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {
     "id": "m-XZZQ2v-i4t"
    },
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -251,7 +251,7 @@
        "39.54418575388878"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -283,10 +283,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {
     "id": "88NVuihyCBBO"
    },
+   "outputs": [],
+   "source": [
+    "# Your code here\n",
+    "import gzip"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -306,25 +316,23 @@
     }
    ],
    "source": [
-    "# Your code here\n",
-    "import gzip\n",
     "?gzip"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "url = \"https://www.ncei.noaa.gov/pub/data/ghcn/daily/by_year/1750.csv.gz\"\n",
     "output = \"./data/1750.csv.gz\"\n",
-    "file_name = wget.download(url, './data')"
+    "file_name = wget.download(url, \"./data\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -342,21 +350,20 @@
        " b'ASN00009592,17500201,DATX,4,,,a,\\n']"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import gzip\n",
-    "with gzip.open(\"./data/1750.csv.gz\", 'r') as f:\n",
+    "with gzip.open(\"./data/1750.csv.gz\", \"r\") as f:\n",
     "    lines = f.readlines()\n",
     "lines[:10]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -374,23 +381,23 @@
        " 'ASN00009592,17500201,DATX,4,,,a,\\n']"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "output = [l.decode('utf-8') for l in lines]\n",
+    "output = [l.decode(\"utf-8\") for l in lines]\n",
     "output[:10]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open (\"./data/1750.csv\", 'w') as f:\n",
+    "with open (\"./data/1750.csv\", \"w\") as f:\n",
     "    out = f.writelines(output)"
    ]
   },
@@ -432,21 +439,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 11,
    "metadata": {
     "id": "F0J443KoFTrs"
    },
    "outputs": [],
    "source": [
     "# Your code here (add cells as needed)\n",
-    "url =  'https://www.ncei.noaa.gov/pub/data/ghcn/daily/ghcnd-stations.txt'\n",
+    "url =  \"https://www.ncei.noaa.gov/pub/data/ghcn/daily/ghcnd-stations.txt\"\n",
     "output = \"./data/stations.txt\"\n",
     "file_name = wget.download(url, output)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -464,7 +471,7 @@
        " 'AFM00040990  31.5000   65.8500 1010.0    KANDAHAR AIRPORT                       40990\\n']"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -477,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 13,
    "metadata": {
     "scrolled": true
    },
@@ -514,7 +521,7 @@
        "  '41217']]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -535,29 +542,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "header = [\n",
-    "    \"Station ID\",\n",
-    "    \"Latitude\",\n",
-    "    \"Longitude\"\n",
-    "]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "129655"
+       "[{'Station ID': 'ACW00011604', 'Latitude': 17.1167, 'Longitude': -61.7833},\n",
+       " {'Station ID': 'ACW00011647', 'Latitude': 17.1333, 'Longitude': -61.7833},\n",
+       " {'Station ID': 'AE000041196', 'Latitude': 25.333, 'Longitude': 55.517},\n",
+       " {'Station ID': 'AEM00041194', 'Latitude': 25.255, 'Longitude': 55.364},\n",
+       " {'Station ID': 'AEM00041217', 'Latitude': 24.433, 'Longitude': 54.651},\n",
+       " {'Station ID': 'AEM00041218', 'Latitude': 24.262, 'Longitude': 55.609},\n",
+       " {'Station ID': 'AF000040930', 'Latitude': 35.317, 'Longitude': 69.017},\n",
+       " {'Station ID': 'AFM00040938', 'Latitude': 34.21, 'Longitude': 62.228},\n",
+       " {'Station ID': 'AFM00040948', 'Latitude': 34.566, 'Longitude': 69.212},\n",
+       " {'Station ID': 'AFM00040990', 'Latitude': 31.5, 'Longitude': 65.85}]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -570,12 +573,12 @@
     "    }\n",
     "    for parts in split_lines\n",
     "]\n",
-    "len(dict_rows)"
+    "dict_rows[:10]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -583,16 +586,13 @@
     "\n",
     "winona = (44.050556, -91.668333)\n",
     "\n",
-    "filtered_stations = [\n",
-    "    row\n",
-    "    for row in dict_rows\n",
-    "    if distance((row[\"Latitude\"], row[\"Longitude\"]), winona).miles <= 25\n",
-    "]"
+    "filtered_stations = [row for row in dict_rows\n",
+    "                        if distance(winona, (row[\"Latitude\"], row[\"Longitude\"])).miles <= 25.0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 26,
    "metadata": {
     "scrolled": true
    },
@@ -603,7 +603,7 @@
        "64"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -792,7 +792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 27,
    "metadata": {
     "id": "SOUt7rCBIZ6f",
     "scrolled": true
@@ -801,73 +801,10 @@
     {
      "data": {
       "text/plain": [
-       "['US1MNHS0001',\n",
-       " 'US1MNHS0006',\n",
-       " 'US1MNHS0007',\n",
-       " 'US1MNHS0008',\n",
-       " 'US1MNHS0009',\n",
-       " 'US1MNHS0012',\n",
-       " 'US1MNHS0013',\n",
-       " 'US1MNHS0022',\n",
-       " 'US1MNHS0023',\n",
-       " 'US1MNHS0028',\n",
-       " 'US1MNOL0038',\n",
-       " 'US1MNOL0991',\n",
-       " 'US1MNWB0015',\n",
-       " 'US1MNWN0002',\n",
-       " 'US1MNWN0003',\n",
-       " 'US1MNWN0004',\n",
-       " 'US1MNWN0005',\n",
-       " 'US1MNWN0006',\n",
-       " 'US1MNWN0007',\n",
-       " 'US1MNWN0009',\n",
-       " 'US1MNWN0011',\n",
-       " 'US1MNWN0013',\n",
-       " 'US1MNWN0019',\n",
-       " 'US1MNWN0021',\n",
-       " 'US1MNWN0023',\n",
-       " 'US1MNWN0024',\n",
-       " 'US1MNWN0026',\n",
-       " 'US1MNWN0027',\n",
-       " 'US1MNWN0029',\n",
-       " 'US1MNWN0031',\n",
-       " 'US1MNWN0033',\n",
-       " 'US1WIBF0002',\n",
-       " 'US1WIBF0010',\n",
-       " 'US1WILC0003',\n",
-       " 'US1WILC0010',\n",
-       " 'US1WILC0011',\n",
-       " 'US1WILC0018',\n",
-       " 'US1WILC0022',\n",
-       " 'US1WILC0038',\n",
-       " 'US1WITR0002',\n",
-       " 'US1WITR0003',\n",
-       " 'US1WITR0004',\n",
-       " 'US1WITR0005',\n",
-       " 'US1WITR0008',\n",
-       " 'US1WITR0010',\n",
-       " 'USC00210146',\n",
-       " 'USC00210559',\n",
-       " 'USC00213812',\n",
-       " 'USC00214418',\n",
-       " 'USC00215488',\n",
-       " 'USC00217184',\n",
-       " 'USC00217277',\n",
-       " 'USC00218951',\n",
-       " 'USC00219067',\n",
-       " 'USC00219072',\n",
-       " 'USC00219077',\n",
-       " 'USC00470124',\n",
-       " 'USC00472165',\n",
-       " 'USC00472992',\n",
-       " 'USC00472996',\n",
-       " 'USC00474366',\n",
-       " 'USC00478589',\n",
-       " 'USW00004956',\n",
-       " 'USW00014920']"
+       "['US1MNHS0001', 'US1MNHS0006', 'US1MNHS0007', 'US1MNHS0008', 'US1MNHS0009']"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -875,12 +812,12 @@
    "source": [
     "# Your code here.\n",
     "station_ids = [row[\"Station ID\"] for row in filtered_stations]\n",
-    "station_ids"
+    "station_ids[:5]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 29,
    "metadata": {
     "scrolled": true
    },
@@ -892,69 +829,10 @@
        " 'https://www.ncei.noaa.gov/pub/data/ghcn/daily/by_station/US1MNHS0006.csv.gz',\n",
        " 'https://www.ncei.noaa.gov/pub/data/ghcn/daily/by_station/US1MNHS0007.csv.gz',\n",
        " 'https://www.ncei.noaa.gov/pub/data/ghcn/daily/by_station/US1MNHS0008.csv.gz',\n",
-       " 'https://www.ncei.noaa.gov/pub/data/ghcn/daily/by_station/US1MNHS0009.csv.gz',\n",
-       " 'https://www.ncei.noaa.gov/pub/data/ghcn/daily/by_station/US1MNHS0012.csv.gz',\n",
-       " 'https://www.ncei.noaa.gov/pub/data/ghcn/daily/by_station/US1MNHS0013.csv.gz',\n",
-       " 'https://www.ncei.noaa.gov/pub/data/ghcn/daily/by_station/US1MNHS0022.csv.gz',\n",
-       " 'https://www.ncei.noaa.gov/pub/data/ghcn/daily/by_station/US1MNHS0023.csv.gz',\n",
-       " 'https://www.ncei.noaa.gov/pub/data/ghcn/daily/by_station/US1MNHS0028.csv.gz',\n",
-       " 'https://www.ncei.noaa.gov/pub/data/ghcn/daily/by_station/US1MNOL0038.csv.gz',\n",
-       " 'https://www.ncei.noaa.gov/pub/data/ghcn/daily/by_station/US1MNOL0991.csv.gz',\n",
-       " 'https://www.ncei.noaa.gov/pub/data/ghcn/daily/by_station/US1MNWB0015.csv.gz',\n",
-       " 'https://www.ncei.noaa.gov/pub/data/ghcn/daily/by_station/US1MNWN0002.csv.gz',\n",
-       " 'https://www.ncei.noaa.gov/pub/data/ghcn/daily/by_station/US1MNWN0003.csv.gz',\n",
-       " 'https://www.ncei.noaa.gov/pub/data/ghcn/daily/by_station/US1MNWN0004.csv.gz',\n",
-       " 'https://www.ncei.noaa.gov/pub/data/ghcn/daily/by_station/US1MNWN0005.csv.gz',\n",
-       " 'https://www.ncei.noaa.gov/pub/data/ghcn/daily/by_station/US1MNWN0006.csv.gz',\n",
-       " 'https://www.ncei.noaa.gov/pub/data/ghcn/daily/by_station/US1MNWN0007.csv.gz',\n",
-       " 'https://www.ncei.noaa.gov/pub/data/ghcn/daily/by_station/US1MNWN0009.csv.gz',\n",
-       " 'https://www.ncei.noaa.gov/pub/data/ghcn/daily/by_station/US1MNWN0011.csv.gz',\n",
-       " 'https://www.ncei.noaa.gov/pub/data/ghcn/daily/by_station/US1MNWN0013.csv.gz',\n",
-       " 'https://www.ncei.noaa.gov/pub/data/ghcn/daily/by_station/US1MNWN0019.csv.gz',\n",
-       " 'https://www.ncei.noaa.gov/pub/data/ghcn/daily/by_station/US1MNWN0021.csv.gz',\n",
-       " 'https://www.ncei.noaa.gov/pub/data/ghcn/daily/by_station/US1MNWN0023.csv.gz',\n",
-       " 'https://www.ncei.noaa.gov/pub/data/ghcn/daily/by_station/US1MNWN0024.csv.gz',\n",
-       " 'https://www.ncei.noaa.gov/pub/data/ghcn/daily/by_station/US1MNWN0026.csv.gz',\n",
-       " 'https://www.ncei.noaa.gov/pub/data/ghcn/daily/by_station/US1MNWN0027.csv.gz',\n",
-       " 'https://www.ncei.noaa.gov/pub/data/ghcn/daily/by_station/US1MNWN0029.csv.gz',\n",
-       " 'https://www.ncei.noaa.gov/pub/data/ghcn/daily/by_station/US1MNWN0031.csv.gz',\n",
-       " 'https://www.ncei.noaa.gov/pub/data/ghcn/daily/by_station/US1MNWN0033.csv.gz',\n",
-       " 'https://www.ncei.noaa.gov/pub/data/ghcn/daily/by_station/US1WIBF0002.csv.gz',\n",
-       " 'https://www.ncei.noaa.gov/pub/data/ghcn/daily/by_station/US1WIBF0010.csv.gz',\n",
-       " 'https://www.ncei.noaa.gov/pub/data/ghcn/daily/by_station/US1WILC0003.csv.gz',\n",
-       " 'https://www.ncei.noaa.gov/pub/data/ghcn/daily/by_station/US1WILC0010.csv.gz',\n",
-       " 'https://www.ncei.noaa.gov/pub/data/ghcn/daily/by_station/US1WILC0011.csv.gz',\n",
-       " 'https://www.ncei.noaa.gov/pub/data/ghcn/daily/by_station/US1WILC0018.csv.gz',\n",
-       " 'https://www.ncei.noaa.gov/pub/data/ghcn/daily/by_station/US1WILC0022.csv.gz',\n",
-       " 'https://www.ncei.noaa.gov/pub/data/ghcn/daily/by_station/US1WILC0038.csv.gz',\n",
-       " 'https://www.ncei.noaa.gov/pub/data/ghcn/daily/by_station/US1WITR0002.csv.gz',\n",
-       " 'https://www.ncei.noaa.gov/pub/data/ghcn/daily/by_station/US1WITR0003.csv.gz',\n",
-       " 'https://www.ncei.noaa.gov/pub/data/ghcn/daily/by_station/US1WITR0004.csv.gz',\n",
-       " 'https://www.ncei.noaa.gov/pub/data/ghcn/daily/by_station/US1WITR0005.csv.gz',\n",
-       " 'https://www.ncei.noaa.gov/pub/data/ghcn/daily/by_station/US1WITR0008.csv.gz',\n",
-       " 'https://www.ncei.noaa.gov/pub/data/ghcn/daily/by_station/US1WITR0010.csv.gz',\n",
-       " 'https://www.ncei.noaa.gov/pub/data/ghcn/daily/by_station/USC00210146.csv.gz',\n",
-       " 'https://www.ncei.noaa.gov/pub/data/ghcn/daily/by_station/USC00210559.csv.gz',\n",
-       " 'https://www.ncei.noaa.gov/pub/data/ghcn/daily/by_station/USC00213812.csv.gz',\n",
-       " 'https://www.ncei.noaa.gov/pub/data/ghcn/daily/by_station/USC00214418.csv.gz',\n",
-       " 'https://www.ncei.noaa.gov/pub/data/ghcn/daily/by_station/USC00215488.csv.gz',\n",
-       " 'https://www.ncei.noaa.gov/pub/data/ghcn/daily/by_station/USC00217184.csv.gz',\n",
-       " 'https://www.ncei.noaa.gov/pub/data/ghcn/daily/by_station/USC00217277.csv.gz',\n",
-       " 'https://www.ncei.noaa.gov/pub/data/ghcn/daily/by_station/USC00218951.csv.gz',\n",
-       " 'https://www.ncei.noaa.gov/pub/data/ghcn/daily/by_station/USC00219067.csv.gz',\n",
-       " 'https://www.ncei.noaa.gov/pub/data/ghcn/daily/by_station/USC00219072.csv.gz',\n",
-       " 'https://www.ncei.noaa.gov/pub/data/ghcn/daily/by_station/USC00219077.csv.gz',\n",
-       " 'https://www.ncei.noaa.gov/pub/data/ghcn/daily/by_station/USC00470124.csv.gz',\n",
-       " 'https://www.ncei.noaa.gov/pub/data/ghcn/daily/by_station/USC00472165.csv.gz',\n",
-       " 'https://www.ncei.noaa.gov/pub/data/ghcn/daily/by_station/USC00472992.csv.gz',\n",
-       " 'https://www.ncei.noaa.gov/pub/data/ghcn/daily/by_station/USC00472996.csv.gz',\n",
-       " 'https://www.ncei.noaa.gov/pub/data/ghcn/daily/by_station/USC00474366.csv.gz',\n",
-       " 'https://www.ncei.noaa.gov/pub/data/ghcn/daily/by_station/USC00478589.csv.gz',\n",
-       " 'https://www.ncei.noaa.gov/pub/data/ghcn/daily/by_station/USW00004956.csv.gz',\n",
-       " 'https://www.ncei.noaa.gov/pub/data/ghcn/daily/by_station/USW00014920.csv.gz']"
+       " 'https://www.ncei.noaa.gov/pub/data/ghcn/daily/by_station/US1MNHS0009.csv.gz']"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -962,12 +840,12 @@
    "source": [
     "base_url = \"https://www.ncei.noaa.gov/pub/data/ghcn/daily/by_station\"\n",
     "station_urls = [f\"{base_url}/{sid}.csv.gz\" for sid in station_ids]\n",
-    "station_urls"
+    "station_urls[:5]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -980,7 +858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 31,
    "metadata": {
     "scrolled": true
    },
@@ -1057,26 +935,16 @@
     }
    ],
    "source": [
+    "compressed_filename = url.split(\"/\")[-1]             \n",
+    "compressed_filepath = f\"./data/{compressed_filename}\" \n",
+    "\n",
     "for url in station_urls:\n",
-    "    compressed_filename = url.split(\"/\")[-1]             \n",
-    "    compressed_filepath = f\"./data/{compressed_filename}\" \n",
-    "    wget.download(url, out=compressed_filepath)\n",
-    "    with gzip.open(compressed_filepath, \"rt\", encoding=\"utf-8\") as f:\n",
-    "        with open(output_file, \"a\", encoding=\"utf-8\") as out:\n",
+    "    wget.download(url, out = compressed_filepath)\n",
+    "    with gzip.open(compressed_filepath, \"rt\", encoding = \"utf-8\") as f:\n",
+    "        with open(output_file, \"a\", encoding = \"utf-8\") as out:\n",
     "            lines = f.readlines()\n",
     "            out.writelines(lines)\n",
     "    print(f\"Downloaded and extracted the data for {url}\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {
-    "id": "jVG4xpnvMvRK"
-   },
-   "outputs": [],
-   "source": [
-    "# Your code here"
    ]
   }
  ],
